<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.toni.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contacto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pedido"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        android:title="@string/pedido"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_estado"
        android:icon="@drawable/ic_status"
        android:orderInCategory="20"
        android:title="@string/estado"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="30"
        android:title="@string/favoritos"
        app:showAsAction="ifRoom" />
</menu>